# fileqry

./: .gitignore  Cargo.toml  README.md
src/: main.rs  vfsx.rs
