[package]
name = "fileqry"
version = "0.0.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
crossbeam-channel = "0.4"
notify = "5.0.0-pre.2"
path-clean = "0.1"
salsa = "0.14"
tracing = "0.1"
tracing-subscriber = "0.2.4"
salsa-inline-query = { git = "https://github.com/zuobaoquan/salsa-inline-query" }
